# api

./: .dockerignore  .gitignore  .gitlab-ci.yml  .hadolint.yaml  Dockerfile  Pipfile  README.md  Tiltfile  app.yaml  docker-compose.yml  fly.toml  goss.yaml  goss_wait.yaml  pyproject.toml  requirements.txt
.github/workflows/: analyse.yml  deploy.yml  test.yml
develop/kubernetes/: gateway.yaml  mongodb.yaml  rabbitmq.yaml  redis.yaml  scheduler.yaml  step-ci.yaml  tracker.yaml  worker.yaml
libraries/python/utils/: config.py  general.py  helper.py  rabbitmq.py  redis.py  steam.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/source/: main.py
services/scheduler/: Dockerfile  requirements.txt
services/scheduler/source/: main.py  task.py
services/tracker/: Dockerfile  requirements.txt
services/tracker/source/: main.py
services/worker/: Dockerfile  requirements.txt
services/worker-2/: Dockerfile  requirements.txt
services/worker-2/source/: main.py
services/worker-2/source/tasks/: check_changelist.py  check_deadlocks.py  check_incorrect_apps.py  check_missing_apps.py  get_app_info.py  get_package_info.py
services/worker/source/: main.py
src/: _test.py  cfg.py  config.py  functions.py  job.py  main.py  requirements.txt  run.py  vdf.py  web.py
src/tasks/: check_changelist.py  check_deadlocks.py  check_incorrect_apps.py  check_missing_apps.py  get_app_info.py  get_package_info.py
src/utils/: general.py  helper.py  redis.py  steam.py  storage.py
tests/: test.json
tests/step-ci/: Dockerfile  workflow.yml
(+3 files in other folders)
